Bug fixed ( horizontal scroll )

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@ html {
     box-sizing: border-box;
     padding:0; 
     margin:0;
-    overflow: auto;
+    overflow-x: hidden;
 }
 
 body {
@@ -15,7 +15,7 @@ body {
     box-sizing: border-box;
     padding:0; 
     margin:0;
-    overflow: auto;
+    overflow-x: hidden;
 }
 
 .header_container{
@@ -327,5 +327,19 @@ body {
     }
     .desc_img {
         margin: auto;
+    }
+}
+
+@media screen and (max-width: 376px) {
+    .about_image img {
+        max-width: 100%;
+        height: 90%;
+    }
+    .desc_img img {
+        max-width: 100%;
+        height: 90%;
+    }
+    .project_container {
+        margin-right: 0;
     }
 }
